Fixing overlapping logo and login page content

--- a/app/assets/stylesheets/hitobito/customizable/_wagon.scss
+++ b/app/assets/stylesheets/hitobito/customizable/_wagon.scss
@@ -15,6 +15,10 @@
   }
 
   & > .sheet { margin: 0 20px; }
+
+  .is-logged-out & {
+    padding-top: 7rem;
+  }
 }
 
 
